- added SCIPinitCutGenParams(), SCIPcreateCutGenResult(), and SCIPfreeCutGenResult() as helper functions for SCIPcalcBestCut()

### New parameters

- `presolving/milp/enableGF2`: whether to enable GF2 presolver in PaPILO

### Changed parameters

Build system
------------

- added build flag CHECKNAME=auto to control name checks in plugin function calls

### Cmake

### Makefiles

Testing
-------

Miscellaneous
-------------


@section RN1001 SCIP 10.0.1
***************************

Fixed bugs
----------

- fixed call of SCIPcreateConsBasicSOCNonlinear() with coefs being NULL, and fixed check for offsets being finite
- avoid crash when initial IIS solve fails while reporting errors explicitly
- fixed failure in nl writing on big endian machines
- correct memory reallocation in storeSubproblemMasterVar() of benders.c to avoid freeing errors
- also set real solution in SCIPsolSetValExact() to maintain approximation
- handle exact solutions in SCIPsolCheckOrig(), SCIPcheckSolOrig(), and SCIPrecomputeSolObj() to correctly check exact initial solutions in SCIPtransformProb()
- fixed use of interactive option (-i) of AMPL interface
- fix calculation of Euclidean norm in calcEfficacyDenseStorage() for use in exact solving
- fixed bug with changing the type of the slack variable in indicator constraints while copying
- removed unnecessary explicit linking against gmp for unittests for exact solving mode
- fixed that parameters passed on as variadic arguments to SCIPsolveNLP() and SCIPsolveNlpi() were ignored when compiling with MS compilers without -Zc:preprocessor
- make more CONOPT output available when verbosity level is set to 2
- turn off detection of definitional constraints in CONOPT for now, to work around a related issue in CONOPT 4.39.0
- signal extreme estimations in timeSeriesEstimate() and skip pruning estimations in eventExecEstim() to avoid unstable restarting